Update Games “games-data”

--- a/data/games.yml
+++ b/data/games.yml
@@ -1,7 +1,70 @@
 games:
   - align: right
     banners: []
-    description: "![](/images/uploads/destdeepspace-logo.png)\n\nThis year’s game, “Destination: Deep Space,” involves pitting two alliances of three teams against each other, each controlling a robot and performing specific tasks on a field to score points. The game begins with the players competing to place hatch covers and rubber balls, or “cargo,” on rockets and cargo ships before returning to their habitat (hab)  platform at the end of the match. The alliance which scores the most points wins and earns qualification points to advance to the World Championship in Houston starting April 17. \n\nFollow our season:\n\n**MARCH 14-16, 2019  PNW District SunDome Event (Qualifying Event)**\r \n\n* [Map to The SunDome in Yakima\r](https://www.google.com/maps/place/State+Fair+Park+-+Home+of+the+Yakima+Valley+SunDome+%26+Central+Washington+State+Fair/@46.589093,-120.486421,16z/data=!4m5!3m4!1s0x0:0xf99f54bcf0cbd922!8m2!3d46.5890932!4d-120.4864208?hl=en-US)\n* [Schedule of events\r](https://www.firstinspires.org/sites/default/files/uploads/frc/2019-events/2019_WAYAK_Agenda.pdf)\n* [Where to find our pit\r](https://www.firstinspires.org/sites/default/files/uploads/frc/2019-events/2019_WAYAK_Agenda.pdf)\n* LIVE FEED! (on game day)\n* [Match results\r](https://frc-events.firstinspires.org/2019/WAYAK/qualifications)\n* [Rankings\r](https://frc-events.firstinspires.org/2019/WAYAK/rankings)\n* [Awards](https://frc-events.firstinspires.org/2019/WAYAK/awards)\n\n**MARCH 28-30, 2019\r PNW District Lake Oswego Event (Qualifying Event)**\n\n* [Map to Lake Oswego High School](https://www.google.com/maps/place/Lake+Oswego+Senior+High+School/@45.42752,-122.702481,16z/data=!4m5!3m4!1s0x0:0xca28633b2e16a0ea!8m2!3d45.4275204!4d-122.7024808?hl=en-US) \r\n* [Schedule of events\r](https://www.firstinspires.org/sites/default/files/uploads/frc/2019-events/2019_ORLAK_Agenda.pdf)\n* Where to find our pit\r\n* LIVE FEED! (on game day)\n* [Match results\r](https://frc-events.firstinspires.org/2019/ORLAK/qualifications)\n* [Rankings\r](https://frc-events.firstinspires.org/2019/ORLAK/qualifications)\n* [Awards](https://frc-events.firstinspires.org/2019/ORLAK/awards)\n\n**APRIL 3-6, 2019\r Pacific Northwest FIRST District Championship (must qualify)**\n\n* Stay tuned!\n\n**APRIL 17-20, 2019\r FIRST Championship in Houston (must qualify)**\n\n* Stay tuned!"
+    description: >-
+      ![]()
+
+
+      This year’s game, “Destination: Deep Space,” involves pitting two
+      alliances of three teams against each other, each controlling a robot and
+      performing specific tasks on a field to score points. The game begins with
+      the players competing to place hatch covers and rubber balls, or “cargo,”
+      on rockets and cargo ships before returning to their habitat (hab) 
+      platform at the end of the match. The alliance which scores the most
+      points wins and earns qualification points to advance to the World
+      Championship in Houston starting April 17. 
+
+
+      Follow our season:
+
+
+      **MARCH 14-16, 2019  PNW District SunDome Event (Qualifying Event)**
+
+
+      * [Map to The SunDome in Yakima
+        ](https://www.google.com/maps/place/State+Fair+Park+-+Home+of+the+Yakima+Valley+SunDome+%26+Central+Washington+State+Fair/@46.589093,-120.486421,16z/data=!4m5!3m4!1s0x0:0xf99f54bcf0cbd922!8m2!3d46.5890932!4d-120.4864208?hl=en-US)
+      * [Schedule of events
+        ](https://www.firstinspires.org/sites/default/files/uploads/frc/2019-events/2019_WAYAK_Agenda.pdf)
+      * [Where to find our pit
+        ](https://www.firstinspires.org/sites/default/files/uploads/frc/2019-events/2019_WAYAK_Agenda.pdf)
+      * LIVE FEED! (on game day)
+
+      * [Match results
+        ](https://frc-events.firstinspires.org/2019/WAYAK/qualifications)
+      * [Rankings
+        ](https://frc-events.firstinspires.org/2019/WAYAK/rankings)
+      * [Awards](https://frc-events.firstinspires.org/2019/WAYAK/awards)
+
+
+      **MARCH 28-30, 2019
+       PNW District Lake Oswego Event (Qualifying Event)**
+
+      * [Map to Lake Oswego High
+      School](https://www.google.com/maps/place/Lake+Oswego+Senior+High+School/@45.42752,-122.702481,16z/data=!4m5!3m4!1s0x0:0xca28633b2e16a0ea!8m2!3d45.4275204!4d-122.7024808?hl=en-US) 
+
+      * [Schedule of events
+        ](https://www.firstinspires.org/sites/default/files/uploads/frc/2019-events/2019_ORLAK_Agenda.pdf)
+      * Where to find our pit
+
+      * LIVE FEED! (on game day)
+
+      * [Match results
+        ](https://frc-events.firstinspires.org/2019/ORLAK/qualifications)
+      * [Rankings
+        ](https://frc-events.firstinspires.org/2019/ORLAK/qualifications)
+      * [Awards](https://frc-events.firstinspires.org/2019/ORLAK/awards)
+
+
+      **APRIL 3-6, 2019
+       Pacific Northwest FIRST District Championship (must qualify)**
+
+      * Stay tuned!
+
+
+      **APRIL 17-20, 2019
+       FIRST Championship in Houston (must qualify)**
+
+      * Stay tuned!
     title: 'Destination: Deep Space'
     year: '2019'
   - align: right
