Update Games “games-data”

--- a/data/games.yml
+++ b/data/games.yml
@@ -12,13 +12,13 @@ games:
       on rockets and cargo ships before returning to their habitat (hab) 
       platform at the end of the match. The alliance which scores the most
       points wins and earns qualification points to advance to the World
-      Championship in Houston starting April 17. 
+      Championship in Houston starting April 17. <br>
 
 
-      Follow our season:
+      Follow our season: <br>
 
 
-      **MARCH 14-16, 2019  PNW District SunDome Event (Qualifying Event)**
+      **MARCH 14-16, 2019  PNW District SunDome Event (Qualifying Event) <br>**
 
 
       * [Map to The SunDome in Yakima
