Update Games “games-data”

--- a/data/games.yml
+++ b/data/games.yml
@@ -2,9 +2,6 @@ games:
   - align: right
     banners: []
     description: >-
-      ![]()
-
-
       This year’s game, “Destination: Deep Space,” involves pitting two
       alliances of three teams against each other, each controlling a robot and
       performing specific tasks on a field to score points. The game begins with
@@ -15,10 +12,10 @@ games:
       Championship in Houston starting April 17.  
 
 
-      <br>Follow our season: <br>
+      Follow our season:
 
 
-      **MARCH 14-16, 2019  PNW District SunDome Event (Qualifying Event) <br>**
+      **MARCH 14-16, 2019  PNW District SunDome Event (Qualifying Event)** 
 
 
       * [Map to The SunDome in Yakima
