Update Partners “partners”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -188,7 +188,7 @@ List:
     logo: /images/uploads/icd-logo.png
     name: ICD
     url: 'http://www.icdcoatings.com/about-icd'
-  - desc: dsffd
+  - desc: "Reducing the distance between inspiration and realization.\r\r\n\nWe are the measurement insight company committed to performance, and compelled by possibilities."
     from: '2013'
     level: thunderstorm
     location: 'Wilsonville, OR'
