Update Partners “partners”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -270,3 +270,14 @@ List:
     logo: /images/uploads/protech-composites.png
     name: ProTech Composites
     url: 'http://www.protechcomposites.com/'
+  - desc: >-
+      The Skyview Booster Club is a group of parents and staff who have joined
+      together for the purpose of creating the best opportunities for Skyview
+      students and to enhance the educational, social and athletic experiences
+      for all Skyview students.
+    from: '2008'
+    level: hurricane
+    location: 'Vancouver, WA'
+    logo: /images/uploads/skyview-booster-club-135x150.jpg
+    name: The Skyview Boosters
+    url: 'https://skyviewathletics.weebly.com/boosters.html'
