--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -281,7 +281,7 @@ List:
     logo: /images/uploads/skyview-booster-club-135x150.jpg
     name: The Skyview Boosters
     url: 'https://skyviewathletics.weebly.com/boosters.html'
-  - desc: "Hi-School Pharmacy/Hardware remains an independently owned and operated company.\r\n\n\r\n\nThere is a great pride in what the name “Hi-School Pharmacy/Hardware” stands for in communities throughout the Northwest."
+  - desc: "Hi-School Pharmacy/Hardware remains an independently owned and operated company.\r\n\n\rThere is a great pride in what the name “Hi-School Pharmacy/Hardware” stands for in communities throughout the Northwest."
     from: '2017'
     level: thunderstorm
     location: 'Vancouver, WA'
